# hyprspace

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
hyprspace.AppDir/: hyprspace.desktop
hyprspace.AppDir/apprun-hooks/: linuxdeploy-plugin-gtk.sh
hyprspace.AppDir/usr/lib/: libWPEBackend-fdo-1.0.so.1  libX11-xcb.so.1  libXcomposite.so.1  libXcursor.so.1  libXdamage.so.1  libXfixes.so.3  libXi.so.6  libXinerama.so.1  libXrandr.so.2  libXrender.so.1  libatk-1.0.so.0  libatk-bridge-2.0.so.0  libatomic.so.1  libatspi.so.0  libblkid.so.1  libcairo-gobject.so.2  libcairo.so.2  libcloudproviders.so.0  libdatrie.so.1  libdbus-1.so.3  libdw.so.1  libelf.so.1  libenchant-2.so.2  libepoxy.so.0  libevdev.so.2  libffi.so.8  libgcrypt.so.20  libgdk-3.so.0  libgdk_pixbuf-2.0.so.0.4200.10  libglib-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgssapi_krb5.so.2  libgstallocators-1.0.so.0  libgstapp-1.0.so.0  libgstaudio-1.0.so.0  libgstbase-1.0.so.0  libgstfft-1.0.so.0  libgstgl-1.0.so.0  libgstpbutils-1.0.so.0  (+54 more)
src/: App.svelte  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/applications/: application.rs  executable.rs  icons.rs  mod.rs
src-tauri/src/command/: mod.rs
src-tauri/src/config/: defaults.rs  load_style.rs  mod.rs  parse_path.rs
src-tauri/src/events/: execute.rs  functions.rs  messages.rs  mod.rs  search.rs
src-tauri/src/socket/: mod.rs
src/lib/: Menu.svelte
src/lib/components/: SearchBar.svelte
(+15 files in other folders)
