[package]
name = "hyprspace"
version = "0.0.1"
description = "Launcher Menu for the Hyprland™ Compositor"
authors = ["errorgenerator"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["cli", "fs-copy-file", "fs-exists", "fs-read-dir", "fs-read-file", "path-all", "protocol-all", "shell-execute", "shell-open", "window-center", "window-close", "window-hide"] }
log = "0.4.17"
env_logger ="0.10.0"
notify = "5.0.0"
directories = "4.0.1"
sysinfo ="0.27.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
